# AscendFT-GEMM

./: README.md
examples/: CMakeLists.txt
examples/03_matmul_add_self_preload_bf16/: CMakeLists.txt  matmul_add.cpp
examples/03_matmul_add_self_preload_fp16/: CMakeLists.txt  matmul_add.cpp
examples/03_matmul_add_self_preload_fp32/: CMakeLists.txt  matmul_add.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_large_robust_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_large_robust_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_medium_robust_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_medium_robust_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_medium_simple_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_medium_simple_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_small_robust_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_small_robust_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_small_simple_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_bf16_small_simple_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp16_large_robust_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp16_medium_robust_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp16_medium_simple_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp16_small_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp16_small_simple_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp32_large_robust_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp32_large_robust_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp32_medium_robust_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp32_medium_robust_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp32_small_robust_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp32_small_robust_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp32_small_simple_inited/: CMakeLists.txt  matmual_ft.cpp
examples/18_matmul_ft_abe_aic_thre_no_splitk_asvar_ft_spec_fp32_small_simple_preload_inited/: CMakeLists.txt  matmual_ft.cpp
examples/24_FI_test_bf16/: CMakeLists.txt  FI_test.cpp
examples/24_FI_test_fp32/: CMakeLists.txt  FI_test.cpp
examples/common/: golden.hpp  helper.hpp
examples/common/golden/: compare_data.hpp  fill_data.hpp  io_data.hpp  matmul.hpp  slice_sum_compute.hpp  threshold_compute.hpp
examples/cube_op_self/gemm/: dispatch_policy.hpp
examples/cube_op_self/gemm/block/: block_mmad.hpp  block_mmad_pingpong.hpp  block_mmad_pingpong_bias.hpp  block_mmad_pingpong_fault_abe_auged_no_splitk.hpp  block_mmad_pingpong_fault_abe_auged_no_splitk_gemv.hpp  block_mmad_pingpong_fault_abe_auged_no_splitk_robust.hpp  block_mmad_pingpong_fault_abe_no_splitk.hpp  block_mmad_pingpong_fault_abe_no_splitk_bak.hpp  block_mmad_pingpong_fault_abe_no_splitk_bak2.hpp  block_mmad_pingpong_fault_abe_no_splitk_bak3.hpp  block_mmad_pingpong_fault_abe_no_splitk_robust.hpp  block_mmad_pingpong_fault_abe_spec_no_splitk.hpp  block_mmad_pingpong_fault_abe_spec_no_splitk_robust.hpp  block_mmad_pingpong_fault_no_splitk.hpp  block_mmad_pingpong_fault_splitk.hpp  block_mmad_pingpong_preload.hpp  block_swizzle.hpp  block_swizzle_FT_no_splitk.hpp
examples/cube_op_self/gemm/device/: device_gemm.hpp  (+1 more)
(+145 files in other folders)
